--- a/index.html
+++ b/index.html
@@ -32,18 +32,22 @@
 
     <div class="content-table">
         <table>
-            <tr>
-                <th>Nama Sungai</th>
-                <th>Kabupaten/Kota</th>
-                <th>Water Quality Index (WQI)</th>
-                <th>Kualitas</th>
-            </tr>
-            <tr>
-                <th>Sungai KAliurang</th>
-                <th>Sleman</th>
-                <th>43.1</th>
-                <th>Baik</th>
-            </tr>
+            <thead>
+                <tr>
+                    <th>Nama Sungai</th>
+                    <th>Kabupaten/Kota</th>
+                    <th>Water Quality Index (WQI)</th>
+                    <th>Kualitas</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <th>Sungai Kaliurang</th>
+                    <th>Sleman</th>
+                    <th>43.1</th>
+                    <th>Baik</th>
+                </tr>
+            </tbody>
         </table>
     </div>
     
