updated city/region tables

--- a/new_design (without php)/index.html
+++ b/new_design (without php)/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
     <title>Water Quality Data</title>
@@ -18,8 +17,7 @@
             <ul class="nav-links">
                 <li><a class="active" href="index.html">Home</a></li>
                 <li><a href="#">About Us</a></li>
-                <li><a href="../pages/city_pages.html">City/Region</a></li>
-                <li><a href="#">Sensors</a></li>
+                <li><a href="#">City/Region</a></li>
             </ul>
         </nav>
     </div>
@@ -44,8 +42,50 @@
         <div class="footer">
             <h4>2020. <a href="https:\\ugm.ac.id">Universitas Gadjah Mada.</a> Sistem Basis Data</h4>
         </div>
-    </div>
+        <div class="city-region">
+            <h1>City/Region Tables</h1>
+            <hr>
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quisquam, labore eaque quaerat molestiae enim modi laborum voluptatum vel tempora voluptate possimus qui amet odit repellendus animi velit cumque optio!
+            <div class="its-table">
+                <table class="content-table">
+                    <thead>
+                        <tr>
+                            <th>Station</th>
+                            <th>River Name</th>
+                            <th>City/Region</th>
+                            <th>Water Quality Index (WQI)</th>
+                            <th>Quality</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>1</td>
+                            <td>Kaliurang</td>
+                            <td>Sleman</td>
+                            <td>43.1</td>
+                            <td>Baik</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Kaliurang</td>
+                            <td>Sleman</td>
+                            <td>43.1</td>
+                            <td>Baik</td>
+                        </tr>
+                        <tr>
+                            <td>1</td>
+                            <td>Kaliurang</td>
+                            <td>Sleman</td>
+                            <td>43.1</td>
+                            <td>Baik</td>
+                        </tr>
+                        
+                    </tbody>
+                </table>
 
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
