update -- still no php, and background problem

--- a/new_design (without php)/index.html
+++ b/new_design (without php)/index.html
@@ -22,7 +22,7 @@
         </nav>
     </div>
     <div class="content">
-        <img class="hero-bg"src="/images/images.jpg" alt="water-image" width="100%"> 
+        <img class="hero-bg"src="/images/images.jpg" alt="water-image" width="100%" height="100%"> 
         <div class="header">
             <h1> <span>Find Your City.</span> Find Your Water Quality.</h1>
         </div>
@@ -42,7 +42,7 @@
         <div class="footer">
             <h4>2020. <a href="https:\\ugm.ac.id">Universitas Gadjah Mada.</a> Sistem Basis Data</h4>
         </div>
-        <div class="city-region">
+        <div class="main-content">
             <h1> <a class="header-city" name="city-region-name">City/Region Tables</a></h1>
             <hr>
             Lorem ipsum dolor sit amet consectetur adipisicing elit. Quod quisquam, labore eaque quaerat molestiae enim modi laborum voluptatum vel tempora voluptate possimus qui amet odit repellendus animi velit cumque optio!
