updated (still not on php format)
background problemm still messin around

--- a/new_design (without php)/index.html
+++ b/new_design (without php)/index.html
@@ -31,7 +31,7 @@
         </div>
         <div class="search-box">
             <form action="search.php" method="POST">
-                <div>
+                <div class="city-nickname">
                     Insert your City Name:
                 </div>
                 <input type="text" name="search_bar" placeholder=" ">
@@ -90,9 +90,11 @@
 
                     </tbody>
                 </table>
+                <hr>
 
             </div>
             <h1> <a name="about"></a> About Us</h1>
+            <hr>
             <p>This website were developed by Physics Engineering Student of Universitas Gadjah Mada to help people know about their Water Quality</p>
         </div>
         
