--- a/design 2.0/index.html
+++ b/design 2.0/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" >
-    <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" type="text/css" href="./style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <title>Water Quality Data</title>
 </head>
 <body class="first-page">
     <header class="header1">
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand" href="index.html"><img src="/images/logo.png" alt="logo"></a>
+            <a class="navbar-brand" href="index.html"><img src="./images/logo.png" alt="logo"></a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
               <span class="navbar-toggler-icon"></span>
             </button>
@@ -32,15 +32,11 @@
           <div class="jumbotron jumbotron-fluid ">
             <div class="container">
               <h1 class="display-4">Find Your City. Find Your Quality</h1>
-              <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, consequuntur!</p>
-            </div>
-            <div class="container h-100">
-                <div class="d-flex justify-content-center h-100">
-                  <div class="searchbar">
-                    <input class="search_input" type="text" name="" placeholder="Search...">
-                    <a href="#" class="search_icon"><i class="fa fa-search"></i></a>
-                  </div>
-                </div>
+              <p class="lead">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Adipisci, accusantium quod dolores nobis tempora ab consequuntur maxime quidem impedit repudiandae.
+              </p>
+              <p class="lead">
+                <a class="btn btn-primary btn-lg" href="./pages/city-region.html" role="button"> Get Started <i class="fa fa-search" aria-hidden="true"></i> </a>
+              </p>
             </div>
             <div class="footer">
                 <p> <a href="https://tf.ugm.ac.id/">Teknik Nuklir dan Teknik Fisika.</a> <a href="https://ugm.ac.id/">Universitas Gadjah Mada.</a>  Sistem Basis Data </p>
