--- a/pop-up/popup.html
+++ b/pop-up/popup.html
@@ -4,6 +4,7 @@
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" >
     <link rel="stylesheet" href="../style.css">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/dataTables.bootstrap4.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 
 <!----CSS------>
@@ -74,6 +75,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	padding-right: 20px;
 }
 
+.popup-button{
+  cursor: pointer;
+}
+
 .table th{
 	padding-top: 15px;
 }
@@ -91,7 +96,10 @@ body {font-family: Arial, Helvetica, sans-serif;}
 <h2>POPUP Indikator Kualitas Air</h2>
 
 <!-- Trigger/Open The Modal -->
-<a id="myBtn">$wqi</a>
+<div class="popup-button">
+  <i id="myBtn" class="fas fa-plus-circle" aria-hidden="true"></i>
+</div>
+
 
 <!-- The Modal -->
 <div id="myModal" class="modal">
@@ -128,9 +136,9 @@ body {font-family: Arial, Helvetica, sans-serif;}
 	            	<th>Cl (mg/l)</th>
 	            	<th>Alkalinity (mg/l)</th>
 	            	<th>WQI</th>
-	            </tr>
-	            <tr>
-	    			<td>$nilai</td>
+	          </tr>
+	          <tr>
+	    			  <td>$nilai</td>
 	        		<td>$nilai</td>
 	        		<td>$nilai</td>
 	        		<td>$nilai</td>
